kubernetes/frontend-service.yaml
# -----------------------------------------------------------------------------
# Frontend Service
#
# Exposes the React UI outside the Kubernetes cluster using an AWS
# Elastic Load Balancer.
# -----------------------------------------------------------------------------

apiVersion: v1
kind: Service

metadata:
  name: maintenance-frontend
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-scheme: "internet-facing"

spec:
  selector:
    app: maintenance-frontend

  type: LoadBalancer

  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
