kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: maintenance-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:ap-south-2:473412285113:certificate/2ae47440-5dab-43b2-a542-3b2519e0d342
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS": 443}]'
    alb.ingress.kubernetes.io/ssl-redirect: '443'
    alb.ingress.kubernetes.io/actions.rewrite-api: >
      {"type":"forward","forwardConfig":{"targetGroups":[{"serviceName":"maintenance-backend","servicePort":"80"}]}}
spec:
  rules:
    - host: aerocare.chandrakalyan.site
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: maintenance-backend
                port:
                  number: 80
          - path: /
            pathType: Prefix
            backend:
              service:
                name: maintenance-frontend
                port:
                  number: 80
